src/test/deca/syntax/valid/custom/return/return_eq.deca
// Description:
//   Return with condition eq.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return a == b;
}
