src/test/deca/syntax/invalid/custom/object/return_bool.deca
// Description:
//   Return boolean.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   boolean b = true;
   return b;
}
